fix: unify the styles on small screen of pc and mobile

--- a/site/components/quoteCard/quoteCard.less
+++ b/site/components/quoteCard/quoteCard.less
@@ -72,13 +72,13 @@
   right: 10%;
   margin-top: -12%;
 }
-// .quote-card:hover {
-//   border-bottom: 4px solid;
-//   border-image: -webkit-linear-gradient(left, #aa6aff, #706dff) 30 30;
-//   border-image: -moz-linear-gradient(left, #aa6aff, #706dff) 30 30;
-//   border-image: linear-gradient(left, #aa6aff, #706dff) 30 30;
-//   transition: all 0.3s;
-// }
+.quote-card:hover {
+  border-bottom: 4px solid;
+  border-image: -webkit-linear-gradient(left, #aa6aff, #706dff) 30 30;
+  border-image: -moz-linear-gradient(left, #aa6aff, #706dff) 30 30;
+  border-image: linear-gradient(left, #aa6aff, #706dff) 30 30;
+  transition: all 0.3s;
+}
 
 @media (max-width: 1014px) {
   .quotes-page-container {
@@ -148,6 +148,9 @@
           width: 70px;
         }
       }
+    }
+    .quote-card:hover {
+      border-bottom: 0px solid;
     }
   }
   .leftpad {
