--- a/site/components/resourceCard/resourceCard.less
+++ b/site/components/resourceCard/resourceCard.less
@@ -9,7 +9,7 @@
   margin-right: 1.3%;
   margin-left: 1.3%;
   .resource-content-wrapper {
-    padding: 80px 70px 60px 70px;
+    padding: 80px 10% 60px 10%;
     .resource-card-icon {
       height: 45px;
     }
@@ -36,21 +36,15 @@
   }
 }
 .resource-card:hover {
-  // margin-top: -20px;
+  margin-top: -20px;
   height: 415px;
-  // border-bottom: 4px solid;
-  // border-image: -webkit-linear-gradient(left, #aa6aff, #706dff) 30 30;
-  // border-image: -moz-linear-gradient(left, #aa6aff, #706dff) 30 30;
-  // border-image: linear-gradient(left, #aa6aff, #706dff) 30 30;
-  // transition: all 0.3s;
+  border-bottom: 4px solid;
+  border-image: -webkit-linear-gradient(left, #aa6aff, #706dff) 30 30;
+  border-image: -moz-linear-gradient(left, #aa6aff, #706dff) 30 30;
+  border-image: linear-gradient(left, #aa6aff, #706dff) 30 30;
+  transition: all 0.3s;
   .resource-card-detail-link {
     display: block;
-  }
-}
-
-@media (max-width: 900px) {
-  .resource-card:not(:hover) {
-    height: 440px;
   }
 }
 
@@ -63,6 +57,12 @@
   }
   .resource-card:not(:hover) {
     height: auto;
+  }
+  .resource-card:hover {
+    margin-top: 0px;
+    height: auto;
+    border-bottom: 0px solid;
+    transition: all 0.3s;
   }
   .resource-card {
     margin-left: 0;
